# fast-shc

app/: Dockerfile  main.py  pyproject.toml  test.db
app/api/: api.py  deps.py
app/api/routes/: auth.py  devices.py  sensors.py  users.py
app/core/: config.py  security.py
app/crud/: device_crud.py  user_crud.py
app/db/: database.py
app/front/public/: global.css  index.html
app/front/src/: App.svelte  stores.js
app/front/src/components/: Tabs.svelte
app/front/src/components/controllers/: Router.svelte
app/front/src/components/gui/: Icon.svelte
app/front/src/components/gui/buttons/: DropdownButton.svelte  FlatButton.svelte  IconButton.svelte  TextButton.svelte
app/front/src/components/gui/inputs/: InputField.svelte  Select.svelte
app/front/src/components/layout/: Header.svelte  Layout.svelte  Sidenav.svelte
app/front/src/components/modals/: DeviceModal.svelte  Modal.svelte
app/front/src/pages/: Devices.svelte  Sensors.svelte  Test.svelte  Video.svelte
app/front/src/pages/auth/: Login.svelte
app/front/src/services/api/: api.js  authApi.js  deviceApi.js
app/front/src/utils/: pageList.js
app/gpio/: gpio.py
app/gpio/sensors/: am2302.py
app/models/: device_model.py  user_model.py
app/schemas/: device_schema.py  token_schema.py  user_schema.py
