[tool.poetry]
name = "fast-shc"
version = "0.1.0"
description = "smart home controller based on fastapi and svelte"
authors = ["ominouscode <evilhideout@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
uvicorn = {extras = ["standart"], version = "^0.17.5"}
SQLAlchemy = "^1.4.31"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^36.0.1"
"Mock.GPIO" = "^0.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
